--- a/index.html
+++ b/index.html
@@ -5,10 +5,43 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Calculator</title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="styles.css" />
         <script src="index.js" defer></script>
     </head>
     <body>
-        gits
+        <div class="container">
+            <h1>Calculator</h1>
+            <div class="calculator-container">
+                <div class="header">
+                    <input class="screen" type="text" id="screen" readonly />
+                </div>
+                <div class="buttons">
+                    <div class="numbers">
+                        <button class="c-button" onclick="reset('soft')">C</button>
+                        <button class="ce-button" onclick="reset('hard')">CE</button>
+                        <button class="plus-button" onclick="operate('+')">+</button>
+
+                        <button onclick="inputCharacter(1)">1</button>
+                        <button onclick="inputCharacter(2)">2</button>
+                        <button onclick="inputCharacter(3)">3</button>
+
+                        <button class="minus-button" onclick="operate('-')">-</button>
+                        <button onclick="inputCharacter(4)">4</button>
+                        <button onclick="inputCharacter(5)">5</button>
+                        <button onclick="inputCharacter(6)">6</button>
+                        <button class="multiply-button" onclick="operate('*')">*</button>
+
+                        <button onclick="inputCharacter(7)">7</button>
+                        <button onclick="inputCharacter(8)">8</button>
+                        <button onclick="inputCharacter(9)">9</button>
+                        <button class="divide-button" onclick="operate('/')">/</button>
+
+                        <button class="zero-button" onclick="inputCharacter(0)">0</button>
+                        <button class="equals-button" onclick="calculate()">=</button>
+                        <button onclick="inputCharacter('.')">.</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
