--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
             <h1>Calculator</h1>
             <div class="calculator-container">
                 <div class="header">
-                    <input class="screen" type="text" id="screen" readonly />
+                    <div class="screen-container">
+                        <input class="screen" type="text" id="screen" readonly />
+                        <button onclick="backspace()" class="backspace-button">X</button>
+                    </div>
                     <span id="memory"></span>
                 </div>
                 <div class="buttons">
